--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*",
+        "laravelcollective/html": "5.2",
+        "psy/psysh": "@stable",
+        "barryvdh/laravel-debugbar": "~2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -29,23 +32,21 @@
         ]
     },
     "scripts": {
-        "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "php artisan key:generate"
-        ],
-        "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
-        ],
-        "pre-update-cmd": [
-            "php artisan clear-compiled"
-        ],
-        "post-update-cmd": [
-            "php artisan optimize"
-        ]
-    },
+            "post-root-package-install": [
+                "php -r \"copy('.env.example', '.env');\""
+            ],
+            "post-create-project-cmd": [
+                "php artisan key:generate"
+            ],
+            "post-install-cmd": [
+                "php artisan clear-compiled",
+                "php artisan optimize"
+            ],
+            "post-update-cmd": [
+                "php artisan optimize",
+                "php artisan clear-compiled"
+            ]
+        },
     "config": {
         "preferred-install": "dist"
     }
